--- a/my6/public/style.css
+++ b/my6/public/style.css
@@ -31,4 +31,39 @@ body {
     justify-content: center;
     display: flex;
     margin-bottom: 12px;
+    border-bottom: lpx solid #cecece;
+}
+
+.todo-list{
+    margin: auto;
+    width: 50%;
+    background-color: #eee;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: lpx solid #efefef;
+    box-shadow: 
+        0 1px rgba(0,0,0,0.15),
+        0 10px 0 -5px #eee,
+        0 10px 1px -4px rgba(0,0,0,0.15),
+        0 20px 0 -10px #eee,
+        0 20px 1px -9px rgba(0,0,0,0.15);
+    padding: 30px;
+}
+
+.todo-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 30px 20px 0;
+    width: 70%;
+    border-bottom: lpx solid #cecece;
+    font-family: Roboto, sans-serif;
+    font-weight: 100;
+    font-size: 15px;
+    color: #333333;
+}
+
+input[type=checkbox] {
+    margin-right: 10px;
 }
