--- a/my6/public/style.css
+++ b/my6/public/style.css
@@ -38,17 +38,20 @@ body {
     margin: auto;
     width: 50%;
     background-color: #eee;
+    background-image: url("NotePaper.bmp");
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: lpx solid #efefef;
+    border: l0px solid #efefef;
     box-shadow: 
         0 1px rgba(0,0,0,0.15),
         0 10px 0 -5px #eee,
         0 10px 1px -4px rgba(0,0,0,0.15),
         0 20px 0 -10px #eee,
         0 20px 1px -9px rgba(0,0,0,0.15);
+    
     padding: 30px;
+    margin-bottom: 70px;
 }
 
 .todo-item {
@@ -62,6 +65,12 @@ body {
     font-weight: 100;
     font-size: 15px;
     color: #333333;
+}
+
+.note-style {
+    margin-top: 30px;
+    margin-bottom: 30px;
+
 }
 
 input[type=checkbox] {
